# iqbart

./: .gitignore  README.md  flake.nix
experiments/: flake.nix  main.py  pyproject.toml
experiments/conf/: config.yaml
experiments/conf/experiment/: cdmixture.yaml  lstar.yaml  stealthy_chameleon.yaml
experiments/conf/hydra/launcher/: submitit_slurm.yaml
experiments/conf/method/: bart.yaml  drbart.yaml  gamlss.yaml  gp.yaml  hbart.yaml  iqbart.yaml  iqbart_cpp.yaml  iqn.yaml  qrf.yaml
experiments/src/core/: harness.py  registry.py  types.py  utils.py
experiments/src/evaluation/: metrics.py  utils.py
experiments/src/experiments/: cdmixture.py  lstar.py  stealthy_chameleon.py
experiments/src/methods/: bart.py  drbart.py  gamlss.py  gp.py  hbart.py  iqbart.py  iqbart_cpp.py  iqn.py  qrf.py
iqbart/: CMakeLists.txt  bd.cpp  bd.h  cppmonbart.cpp  cppmonbart.h  funs.cpp  funs.h  gig.cpp  gig.h  info.h  iqbart.cpp  iqbart.h  iqbart_py.cpp  rn.h  rrn.h  tensor.h  tree.cpp  tree.h
iqbart/tests/: tests.cpp
